# poo-project

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: main.cpp
src/app/: GameEngine.cpp  GameEngine.hpp  Window.cpp  Window.hpp
src/domain/: GameEngine.hpp
